<resources>
    <string name="app_name">Patricks Resume</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_dicee_roll">Roll</string>
    <string name="contentDescProjectIcon">Application Icon</string>
    <string name="project_xylophone_desc">Make your own Music using the Xylophone app</string>
    <string name="project_xylophone_title">Xylophone</string>
    <string name="project_dicee_title">Dicee</string>
    <string name="project_dicee_desc">Dare a bet, roll a dice.</string>
    <string name="btn_ask">Ask</string>
    <string name="msg_ball_header">Make everyday decisions easier!</string>
    <string name="project_eight_ball_title">Magic 8 Ball</string>
    <string name="project_eight_ball_desc">Want to know something but can\'t ask anyone? Fear not, ask it to the Magic 8 Ball.</string>

    <string name="title_activity_dicee_launcher">DiceeLauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="contentDescriptionDiceeIcon">Dicee Icon</string>
    <string name="transition_open_app_name">open_app</string>
    <string name="transition_open_app_image">open_image</string>
    <string name="transition_open_app_content">open_content</string>
    <string name="transition_open_app_textview">open_textview</string>

    <!--Destini-->
    <string name="T1_Story">Your car has blown a tire on a winding road in the middle of nowhere with no cell phone reception. You decide to hitchhike. A rusty pickup truck rumbles to a stop next to you. A man with a wide brimmed hat with soulless eyes opens the passenger door for you and asks: \"Need a ride, boy?\". </string>
    <string name="T1_Ans1">I\'ll hop in. Thanks for the help! </string>
    <string name="T1_Ans2">Better ask him if he\'s a murderer first. </string>
    <string name="T2_Story">He nods slowly, unphased by the question.</string>
    <string name="T2_Ans1">At least he\'s honest. I\'ll climb in.</string>
    <string name="T2_Ans2">Wait, I know how to change a tire.</string>
    <string name="T3_Story">As you begin to drive, the stranger starts talking about his relationship with his mother. He gets angrier and angrier by the minute. He asks you to open the glovebox. Inside you find a bloody knife, two severed fingers, and a cassette tape of Elton John. He reaches for the glove box.</string>
    <string name="T3_Ans1">I love Elton John! Hand him the cassette tape.</string>
    <string name="T3_Ans2">It\'s him or me! You take the knife and stab him.</string>
    <string name="T4_End">What? Such a cop out! Did you know traffic accidents are the second leading cause of accidental death for most adult age groups?</string>
    <string name="T5_End">As you smash through the guardrail and careen towards the jagged rocks below you reflect on the dubious wisdom of stabbing someone while they are driving a car you are in.</string>
    <string name="T6_End">You bond with the murderer while crooning verses of "Can you feel the love tonight". He drops you off at the next town. Before you go he asks you if you know any good places to dump bodies. You reply: \"Try the pier.\"</string>
    <string name="project_destini_title">Destini</string>
    <string name="project_destini_desc">Embark on an adventure where you decide the course of the story.</string>

    <!--Quizzler-->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="initial_score">Score 0/13</string>

    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">You got it!</string>
    <string name="msg_score">Score %1$d/%2$d</string>
    <string name="alert_score_message">You scored %1$d points</string>

    <string name="question_1">Valentine\'s day is banned in Saudi Arabia.</string>
    <string name="question_2">A slug\'s blood is green.</string>
    <string name="question_3">Approximately one quarter of human bones are in the feet.</string>
    <string name="question_4">The total surface area of two human lungs is approximately 70 square metres.</string>
    <string name="question_5">In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat.</string>
    <string name="question_6">In London, UK, if you happen to die in the House of Parliament, you are technically entitled to a state funeral, because the building is considered too sacred a place.</string>
    <string name="question_7">It is illegal to pee in the Ocean in Portugal.</string>
    <string name="question_8">You can lead a cow down stairs but not up stairs.</string>
    <string name="question_9">Google was originally called \"Backrub\".</string>
    <string name="question_10">Buzz Aldrin\'s mother\'s maiden name was \"Moon\".</string>
    <string name="question_11">The loudest sound produced by any animal is 188 decibels. That animal is the African Elephant.</string>
    <string name="question_12">No piece of square dry paper can be folded in half more than 7 times.</string>
    <string name="question_13">Chocolate affects a dog\'s heart and nervous system; a few ounces are enough to kill a small dog.</string>
    <string name="alert_quizzler_game_over">Game Over</string>
    <string name="alert_quizzler_close_application">Close Application</string>
    <string name="project_quizzler_title">Quizzler</string>
    <string name="project_quizzler_desc">Think you know it all? Test your knowledge in the Quizzler app!</string>

    <!--Clima-->
    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="default_query">Enter city name</string>
    <string name="project_clima_title">Clima</string>
    <string name="project_clima_desc">What\'s the weather like near you? Check it with the Clima app.</string>
    <string name="desc_roll_dice_button">Rolls the Dice</string>
    <string name="contentDesc_dicee_casino">Dicee Casino Logo</string>
    <string name="contentDesc_left_dice">Left Dice</string>
    <string name="contentDesc_right_dice">Right Dice</string>

    <!--Bitcoin-->
    <string name="label_default_text">304.74</string>
    <string name="label_error_text">Error</string>
    <string name="base">Base Currency</string>
    <string name="imageview_desc">Bitcoin Logo</string>
    <string name="project_bitcoin_ticker_title">Bitcoin Ticker</string>
    <string name="project_bitcoin_ticker_desc">Follow the latest ask value for bitcoins in your currency.</string>

    <string-array name="currency_array">
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>

    <!--Flash Chat-->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This mPassword is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="project_flash_chat_title">Flash Chat</string>
    <string name="project_flash_chat_desc">Instantly send messages to other app users.</string>

    <!--Githubber-->
    <string name="project_githubber_title">Githubber</string>
    <string name="project_githubber_desc"><!--TODO--></string>
    <string name="msg_loading">Loading...</string>

</resources>
