<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/destini_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".views.projects.destini.DestiniActivity">


    <TextView
        android:id="@+id/storyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/T1_Story"
        android:textColor="#ffffffff"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/buttonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp"
        android:background="#e74c3c"
        android:text="@string/T1_Ans1"
        android:textColor="#ecf0f1"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/buttonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonTop"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttonTop"
        android:background="#3498db"
        android:text="@string/T1_Ans2"
        android:textColor="#ecf0f1"
        android:textSize="15sp"/>


</RelativeLayout>
